# boston-housing-prediction

./: .gitignore  DEPLOYMENT.md  README.md  app.py  boston_housing.ipynb  boston_housing_model.pkl  model_info.pkl  pyproject.toml  requirements.txt  train_model.py  vercel.json
api/: index.py
public/: index.html
templates/: index.html
